--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@ngui/map": "^0.18.3",
+    "@angular/animations": "^5.0.2",
+    "@angular/common": "^5.0.2",
+    "@angular/compiler": "^5.0.2",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
+    "@angular/http": "^5.0.2",
+    "@angular/platform-browser": "^5.0.2",
+    "@angular/platform-browser-dynamic": "^5.0.2",
+    "@angular/platform-server": "^5.0.2",
+    "@angular/router": "^5.0.2",
     "@types/googlemaps": "^3.26.14",
+    "angular-datatables": "^4.4.1",
     "arrive": "^2.3.1",
     "bootstrap": "^3.3.5",
     "bootstrap-notify": "^3.1.3",
     "chartist": "^0.9.4",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "jquery": "^1.12.4",
     "moment": "^2.18.1",
     "ngx-webstorage": "^2.0.0",
@@ -35,23 +38,30 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.1",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "2.5.45",
+    "@angular/cli": "^1.5.2",
+    "@angular/compiler-cli": "^5.0.2",
+    "@angular/language-service": "^5.0.2",
+    "@types/datatables.net": "^1.10.7",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
+    "angular-ide": "^0.9.31",
+    "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
+    "sw-precache": "^5.2.0",
+    "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "^2.6.1"
   }
 }
