--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "datatables.net-dt": "^1.10.16",
     "jquery": "^1.12.4",
     "moment": "^2.18.1",
+    "ngx-bootstrap": "^2.0.0-beta.8",
     "ngx-webstorage": "^2.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
