--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "^5.0.2",
         "@angular/platform-server": "^5.0.2",
         "@angular/router": "^5.0.2",
+        "@swimlane/ngx-charts": "^7.0.1",
         "@types/googlemaps": "^3.26.14",
         "angular-datatables": "^4.4.1",
         "arrive": "^2.3.1",
@@ -29,6 +30,7 @@
         "bootstrap-notify": "^3.1.3",
         "chartist": "^0.9.4",
         "core-js": "^2.4.1",
+        "d3": "^4.12.0",
         "datatables.net": "^1.10.16",
         "datatables.net-dt": "^1.10.16",
         "inputmask": "^3.3.11",
